# stellarium

./: CMakeLists.txt
guide/: guide.tex  plg_catalogs.tex  plg_navstars.tex
guide/helper/navstars/: README.md  capella.php  greatcircles.php  hamal.php  shedar.php  test.kml  userguide.kml
plugins/AstroNav/: CMakeLists.txt
plugins/AstroNav/resources/: AstroNav.qrc
plugins/AstroNav/src/: AstroNav.cpp  AstroNav.hpp  AstroNavPlugin.cpp  AstroNavPlugin.hpp  AstroNavStar.cpp  AstroNavStar.hpp  CMakeLists.txt
plugins/AstroNav/src/Almanac/: AlmanacAngloAmerican.hpp  AlmanacFrench.hpp  AlmanacRussian.hpp  AlmanacStrategy.cpp  AlmanacStrategy.hpp
plugins/NavStars/src/: CMakeLists.txt  NavStars.cpp  NavStars.hpp  NavStarsCalc.cpp  NavStarsCalc.hpp  NavStarsCalculator.cpp  NavStarsCalculator.hpp
plugins/NavStars/src/test/: testNavStars.cpp  testNavStars.hpp
plugins/Satellites/src/: Satellite.cpp  Satellite.hpp  Satellites.cpp  Satellites.hpp  gSatWrapper.cpp  gSatWrapper.hpp
scripts/tests/: userguide.ssc
src/core/: StelApp.cpp
