SET(ASTRONAV_PLUGIN_MAJOR "0")
SET(ASTRONAV_PLUGIN_MINOR "1")
SET(ASTRONAV_PLUGIN_PATCH "0")
SET(ASTRONAV_VERSION "${ASTRONAV_PLUGIN_MAJOR}.${ASTRONAV_PLUGIN_MINOR}.${ASTRONAV_PLUGIN_PATCH}")

SET(CMAKE_INSTALL_PREFIX $HDATALOC)
ADD_DEFINITIONS(-DASTRONAV_PLUGIN_VERSION="${ASTRONAV_VERSION}")
ADD_DEFINITIONS(-DASTRONAV_PLUGIN_LICENSE="GNU GPLv2 or later")

ADD_SUBDIRECTORY( src )

INSTALL(FILES DESTINATION "modules/AstroNav")
